--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:test": "vue-cli-service serve --mode test",
-    "serve:prod": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build --modern",
+    "lint": "vue-cli-service lint",
     "build:dev": "vue-cli-service build --mode development",
     "build:test": "vue-cli-service build --mode test",
-    "lint": "vue-cli-service lint"
+    "serve:prod": "vue-cli-service serve --mode production",
+    "serve:test": "vue-cli-service serve --mode test"
   },
   "dependencies": {
     "vue": "^2.6.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.1",
